--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "react-carousel": "^4.3.0",
     "react-carousel-minimal": "^1.3.4",
     "react-dom": "^17.0.2",
+    "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
+    "styled-components": "^5.3.1",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
