--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react-carousel": "^4.3.0",
     "react-carousel-minimal": "^1.3.4",
     "react-dom": "^17.0.2",
+    "react-icons": "^4.2.0",
     "react-responsive-carousel": "^3.2.21",
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
